--- a/project folder copy/1.html
+++ b/project folder copy/1.html
@@ -56,12 +56,7 @@
         margin-left: 40px ;
         
     }
-    #n
-    {
-        background-color: rgb(219, 12, 12);
-        padding :30px;
-    
-    }
+   
    
   
  </style>
@@ -209,9 +204,9 @@
 <h2 style="margin-left: 40px;">Phone : 798906xxxx</h2>
 </section>
 <br>
-<div id="n">
 
-<footer style="display: block;width: 100%;margin: 0;">
+
+<footer style="display: block;margin-right:-50px;margin-left: -50px; margin-bottom: -50px;background-color: aqua;padding: 10px;">
     <h1 style="font-size: 20px;text-align: center;">&copy; 2024 kurmana jagadish. All rights reserved.</h1>
 </footer>
 </div>
