--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,8 @@
    font-size: 25px; 
    
    margin-left: 60%;
+   position: sticky;
+   top: 0;
    
    }
    
@@ -36,7 +38,7 @@
     #b {
 
         margin-top:-60px;
-        margin-left: 170px ; 
+        margin-left: 180px ; 
         width:5px; 
         height: 5px;
     }
@@ -71,8 +73,8 @@
     </div>
     <div id="a">
     
-    <h1 style="font-size: 40px; margin-left: 10%;">I' m Jagadish, a</h1>
-    <h2 style="font-size: 60px;margin-left: 10%; margin-bottom: 5%;">Full Stack Developer</h2>
+    <h1 style="font-size: 60px; margin-left: 10%;">I' m Jagadish, a</h1>
+    <h2 style="font-size: 50px;margin-left: 10%; margin-bottom: 5%;">Full Stack Developer</h2>
     <h3 style="font-size: 40px;margin-left: 10%;margin-bottom: 5%">python and Machine Learning</h3>
     <div style="position: relative;top:-30px;">
     <img src="GitHub.svg" width="150px" height="40px" style="margin-left: 5%">
@@ -176,17 +178,9 @@
  <br>
 
     <h2 style="margin-left: 40px ;">ATM/Bank (Deposit/Withdrawal Functions)</h2>
-    <h2 style="margin-left: 40px;">Inventory Management</h2>
-
-<div >
-  
-
-    <a href="file:///C:/Users/jagad/Downloads/Resume_2024-06-13_8092832%20(1).pdf">
-        <button style="background-color: rgb(227, 16, 68); height :40px ;width: 120px;margin-left: 50px;border-radius: 20px;">go to resume </button>    
-    </a> 
-</div>    
+    <h2 style="margin-left: 40px;">Inventory Management</h2>  
 <br>
-<h1 style="margin-left: 40px; font-size: 50px;">Additional Details</h1>
+<h1 style="margin-left: 40px; font-size: 35px;">Additional Details</h1>
 <div id="k">
 <h1 >Highest Education</h1>
 <h1>B.Com Computers</h1>
